# superset_glue

./: README.md  pyproject.toml
superset_glue/: main.py  superset.py
superset_glue/sdk/: base.py
tests/: test_superset_glue.py
